--- a/git.html
+++ b/git.html
@@ -7,16 +7,18 @@
     <title>Aprendiendo GITHUB</title>
 </head>
 <body>
-    <h1>Como subir un proyecto local a GITHUB</h1>
+    <h2>Como subir un proyecto local a GITHUB</h2>
 
     <p>
         Creamos un nuevo repositorio en <a href="http://https://github.com.">Github</a>   Le damos nombre, descripción, seleccionamos si va a ser un proyecto publico o privado si es el caso, y dejamos el check de crear README sin marcar.<br>
          Le damos a crear repositorio y con esto ya tenemos el repositorio donde alojaremos nuestro proyecto.
         Desde la terminal del equipo donde esta el proyecto que queremos subir a github.<br>
         
-        <h2>COMANDOS BASICOS GITHUB</h2>
+        <h3>COMANDOS BASICOS GITHUB</h3>
         
         git init
+        <br>
+        git status
         <br>
         git add .
         <br>
@@ -24,7 +26,7 @@
         <br>
         git remote add origin https://github.com/NOMBRE_USUARIO/NOMBRE_PROYECTO.git
         <br>
-        git push -u origin master
+          git push -u origin master
         <br>
     </p>
 </body>
